--- a/index.html
+++ b/index.html
@@ -52,22 +52,37 @@
     <!-- Main  -->
 
     <main>
-      <section class="bg-white border">
-        <div class="container flex border">
-          <div class="large-col border"></div>
-          <div class="small-col border"></div>
+      <section class="bg-white">
+        <div class="container flex">
+          <div class="large-col">
+            <img src="img/item1.svg" alt="item1">
+          </div>
+          <div class="small-col">
+            <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
+            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo. </p>
+          </div>
         </div>
       </section>
-      <section class="bg-gray border">
+      <section class="bg-gray">
         <div class="container flex row-reverse">
-          <div class="large-col border"></div>
-          <div class="small-col border"></div>
+          <div class="large-col">
+            <img src="img/item2.svg" alt="item2">
+          </div>
+          <div class="small-col">
+            <h3>Dove trovarsi è facile</h3>
+            <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
+          </div>
         </div>
       </section>
-      <section class="bg-white border">
-        <div class="container flex border">
-          <div class="large-col border"></div>
-          <div class="small-col border"></div>
+      <section class="bg-white">
+        <div class="container flex">
+          <div class="large-col">
+            <img src="img/item3.svg" alt="item3">
+          </div>
+          <div class="small-col">
+            <h3>Da pochi a un fandom</h3>
+            <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+          </div>
         </div>
       </section>
       <section class="bg-gray">
