--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p>mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo</p>
           <p>assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
           <div class="buttons">
-            <span class="button left"><i class="fa-solid fa-down-long"></i></i> Scarica per Mac</span>
+            <span class="button left"><i class="fa-solid fa-down-long"></i> Scarica per Mac</span>
             <span class="button right">Apri Discord nel tuo browser</span>
           </div>
         </div>
@@ -85,12 +85,28 @@
           </div>
         </div>
       </section>
-      <section class="bg-gray">
-        <div class="container flex border">
-          <div class="full-col border"></div>
+      <section class="bg-gray section-special">
+        <div class="container flex">
+          <div class="full-col">
+            <h3>Tecnologia affidabile per tenersi in contatto</h3>
+            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda</p>
+            <p>gli amici giocare in streaming, o nunitet in una sessione di disegno con la condivisione schermo.</p>
+            <img src="img/item4-big.svg" alt="item4">
+            <div>
+              <img src="img/stars.svg" alt="stars">
+              <h6>Pronto a iniziare la tua avventura?</h6>
+            </div>
+            <div class="buttons">
+                <span class="button last"><i class="fa-solid fa-down-long"></i> Scarica per Mac</span>
+            </div>
+          </div>
+            
         </div>
+
       </section>
     </main>
+
+            
 
     <!-- Footer -->
     <footer>
